--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!---- <link rel="stylesheet" href="style.css">--->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,9 +13,9 @@
             <input type="text" id="myInput" placeholder="Add a Task">
             <span onclick="newElement()" class="addBtn">Add</span>
         </div>
+        <ul id="myUL">
+        </ul>
     </div>
-    </ul>
-
     <script src="app.js"></script>
 
 </body>
